syntax = "proto3";

package kurrentdb.protocol.v2.custom_indexes;

option csharp_namespace = "KurrentDB.Protocol.V2.CustomIndexes";

import "google/api/annotations.proto";

service CustomIndexesService {
  //
  // Write-side Services
  //
  rpc CreateCustomIndex(CreateCustomIndexRequest) returns (CreateCustomIndexResponse) {
    option (google.api.http) = {
      post: "/v2/indexes/{name}",
      body: "*"
    };
  };

  rpc StartCustomIndex(StartCustomIndexRequest) returns (StartCustomIndexResponse) {
    option (google.api.http) = {
      post: "/v2/indexes/{name}/start",
    };
  }

  rpc StopCustomIndex(StopCustomIndexRequest) returns (StopCustomIndexResponse) {
    option (google.api.http) = {
      post: "/v2/indexes/{name}/stop",
    };
  }

  rpc DeleteCustomIndex(DeleteCustomIndexRequest) returns (DeleteCustomIndexResponse) {
    option (google.api.http) = {
      delete: "/v2/indexes/{name}"
    };
  }

  //
  // Read-side Services
  //
  rpc ListCustomIndexes(ListCustomIndexesRequest) returns (ListCustomIndexesResponse) {
    option (google.api.http) = {
      get: "/v2/indexes",
    };
  }

  rpc GetCustomIndex(GetCustomIndexRequest) returns (GetCustomIndexResponse) {
    option (google.api.http) = {
      get: "/v2/indexes/{name}",
    };
  }
}

enum KeyType {
  KEY_TYPE_UNSPECIFIED = 0;
  KEY_TYPE_STRING = 1;
  KEY_TYPE_DOUBLE = 2;
  KEY_TYPE_INT_16 = 3;
  KEY_TYPE_INT_32 = 4;
  KEY_TYPE_INT_64 = 5;
  KEY_TYPE_UINT_32 = 6;
  KEY_TYPE_UINT_64 = 7;
}


//
// Write-side messages
//

message CreateCustomIndexRequest {
  string name = 1;
  string filter = 2;
  string partition_key_selector = 3;
  KeyType partition_key_type = 4;
  optional bool start = 5; // if unspecified: treated as true
}

message CreateCustomIndexResponse {
}

message StartCustomIndexRequest {
  string name = 1;
}

message StartCustomIndexResponse {
}

message StopCustomIndexRequest {
  string name = 1;
}

message StopCustomIndexResponse {
}

message DeleteCustomIndexRequest {
  string name = 1;
}

message DeleteCustomIndexResponse {
}

//
// Read-side messages
//

message ListCustomIndexesRequest {
}

message ListCustomIndexesResponse {
  map<string, CustomIndex> custom_indexes = 1;
}

message GetCustomIndexRequest {
  string name = 1;
}

message GetCustomIndexResponse {
  CustomIndex custom_index = 1;
}

message CustomIndex {
  string filter = 1;
  string partition_key_selector = 2;
  KeyType partition_key_type = 3;
  CustomIndexStatus status = 4;
}

enum CustomIndexStatus {
  CUSTOM_INDEX_STATUS_UNSPECIFIED = 0;
  CUSTOM_INDEX_STATUS_STARTED = 1;
  CUSTOM_INDEX_STATUS_STOPPED = 2;
  CUSTOM_INDEX_STATUS_DELETED = 3;
}
